.k8s/prod/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  tls:
    - hosts:
        - user.vexl.it
      secretName: vexl-user-ms-api-production-tls
  rules:
    - host: user.vexl.it
      http:
        paths:
          - path: /
            backend:
              serviceName: application-cluster-ip-service
              servicePort: 8080
